# CNCv1

./: .clang-format  .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  project_tree.txt
build_tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/: toolchain-arm-none-eabi.cmake
mcu_support/: CMakeLists.txt
mcu_support/st/: STM32F446RETX_FLASH.ld
src/: CMakeLists.txt  main.c  src_tree.txt
src/app/: CMakeLists.txt  app_init.c  app_init.h  main.c  main.h
src/app/motion/: CMakeLists.txt  README.md  home.c  home.h  motion_units.c  motion_units.h
src/bsp/: CMakeLists.txt  bsp_common.h  bsp_gpio.c  bsp_gpio.h  bsp_pins.h  bsp_usart2_debug.c  bsp_usart2_debug.h
src/config/: CMakeLists.txt  system_clock.c  system_clock.h
src/config/axis/: CMakeLists.txt  axis.c  axis.h
src/config/clock/: CMakeLists.txt
src/drivers/: CMakeLists.txt  stepgen_pwm_tim3.c  stepgen_pwm_tim3.h
src/drivers/estop/: CMakeLists.txt  estop.c  estop.h
src/drivers/limits/: CMakeLists.txt  README.md  limits.c  limits.h
src/drivers/stepgen/: CMakeLists.txt  README.md  stepgen_pwm_tim3.c  stepgen_pwm_tim3.h
src/utils/: CMakeLists.txt  delay.c  delay.h
tests/: CMakeLists.txt  test_motion_units.c
